First Edit of Lab 1
Added a paragraph to Lab 1 to test version control in GitHub

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
    </head>
    <body>
       Meat of the page will go here!
+      <p>
+         Here is a new paragraph for the first change!
+      </p>
       <br />
       <p class="footer">
          <a href="http://www.google.com">Google</a>
