Header for submission
Added name, date, and project title for project submission.

--- a/Game Project/GameProject_ClaytonEnright.html
+++ b/Game Project/GameProject_ClaytonEnright.html
@@ -1,4 +1,10 @@
 <!DOCTYPE html>
+<!--
+   Clayton Enright
+   10/2/14
+   Intro to Programming
+   Project 2 (Game v0.2)
+  -->
 <html>
    <head>
       <title>
