--- a/Game Project/GameProject_ClaytonEnright.html
+++ b/Game Project/GameProject_ClaytonEnright.html
@@ -74,7 +74,7 @@
        <textarea rows="1" cols="2" id="scoreBox">0</textarea>
        <br>
        
-       <img src="https://raw.githubusercontent.com/claytonenright/IntroProgramming/master/Game%20Project/GameMap.png" 
+       <img src="C:\Users\Clayton\Documents\GitHub\IntroProgramming\Game Project\GameMap.png" 
             alt="Map" 
             height="432" width="768">
               
